# Fractals

./: .gitignore  README.md  package-lock.json  package.json  server.js
compute_fractal/: Cargo.toml
compute_fractal/src/: lib.rs  main  main.rs
experiments/: .gitignore  Cargo.toml  index.js  init.js  package-lock.json  package.json
experiments/src/: lib.rs  main.rs
fractal_utils/: Cargo.toml  package.json
fractal_utils/src/: lib.rs  main.rs  server.js
fractals/: .gitignore  package-lock.json  package.json
fractals/components/: controller.jsx  mandelbrot.jsx  mandelbrotController.jsx
fractals/fractal_utils/: Cargo.toml
fractals/fractal_utils/src/: lib.rs  main.rs
fractals/pages/: _app.js  index.js
fractals/styles/: _app.css  controller.module.css  index.module.css  mandelbrot.module.css
frontend/: package-lock.json
frontend/pages/: index.js
frontend/scripts/: mandelbrot.js
scripts/: mandelbrot.js
