[package]
name = "experiments"
version = "0.1.0"
authors = ["danduggan98 <dadu3890@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.63"
